--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "node-telegram-bot-api": "^0.61.0"
+  },
+  "scripts": {
+    "start": "npm run build && node ./build/index.js"
   }
 }
