--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "node-telegram-bot-api": "^0.61.0"
   },
   "scripts": {
-    "start": "npm run build && node ./build/index.js"
+    "start": "node index.js"
   }
 }
